Add primary-key and unique conflict proof for delos_mvcc SQL path